--- a/.minecraft/openloader/resources/Zengineering/assets/create101/lang/en_us.json
+++ b/.minecraft/openloader/resources/Zengineering/assets/create101/lang/en_us.json
@@ -2,5 +2,8 @@
 "item.refinedstorage.raw_basic_processor": "Iron Ticket",
 "item.refinedstorage.raw_improved_processor": "Gold Ticket",
 "item.refinedstorage.raw_advanced_processor": "Shiny Ticket",
-"item.refinedstorage.processor_binding": "Sticky Ticket"
+"item.refinedstorage.processor_binding": "Sticky Ticket",
+"item.minecraft.poisonous_potato.tip": "Kill a snow golem",
+"block.mekanismgenerators.reactor_glass.tip": "Wither cannot destory this block",
+"block.mekanismgenerators.reactor_frame.tip": "Wither cannot destory this block"
 }
