--- a/.minecraft/openloader/resources/Zengineering/assets/create101/lang/zh_cn.json
+++ b/.minecraft/openloader/resources/Zengineering/assets/create101/lang/zh_cn.json
@@ -9,5 +9,6 @@
 "item.mekanism.nugget_tin": "小雪花",
 "item.mekanism.nugget_tin.tip": "杀死雪傀儡掉落",
 "item.mekanism.ingot_steel": "神秘三角",
-"item.mekanism.ingot_steel.tip": "毕业物品"
+"item.mekanism.ingot_steel.tip": "毕业物品",
+"infuse_type.mekanism.tin": "史莱姆"
 }
