--- a/.minecraft/openloader/resources/Zengineering/assets/create101/lang/en_us.json
+++ b/.minecraft/openloader/resources/Zengineering/assets/create101/lang/en_us.json
@@ -4,30 +4,44 @@
 "item.refinedstorage.raw_advanced_processor": "Shiny Ticket",
 "item.refinedstorage.processor_binding": "Sticky Ticket",
 "item.mekanism.ingot_osmium": "Twisted Ticket",
-"block.mekanismgenerators.reactor_glass.tip": "Wither cannot destory this block",
-"block.mekanismgenerators.reactor_frame.tip": "Wither cannot destory this block",
+"block.mekanismgenerators.reactor_glass.tip": "§eWither cannot destory this block",
+"block.mekanismgenerators.reactor_frame.tip": "§eWither cannot destory this block",
 "item.mekanism.nugget_tin": "Little Snowflake",
-"item.mekanism.nugget_tin.tip": "Kill a snow golem",
-"item.mekanism.ingot_steel": "Mysterious Triangle",
-"item.mekanism.ingot_steel.tip": "The final item",
-"infuse_type.mekanism.tin": "Slime",
-"block.minecraft.gold_ore.tip": "Not generated in world",
-"block.minecraft.iron_ore.tip": "Generated in world",
-"block.minecraft.coal_ore.tip": "Not generated in world",
-"block.minecraft.diamond_ore.tip": "Not generated in world",
-"block.minecraft.redstone_ore.tip": "Generated in world",
-"block.minecraft.lapis_ore.tip": "Not generated in world",
-"block.minecraft.emerald_ore.tip": "Not generated in world",
-"block.create.zinc_ore.tip": "Not generated in world",
-"block.create.copper_ore.tip": "Not generated in world",
-"block.minecraft.nether_quartz_ore.tip": "Generated in world",
-"item.minecraft.cocoa_beans.tip": "Drop from jungle leaves",
-"block.mekanism.metallurgic_infuser.tip": "Put redstone in energy slot for some energy",
+"item.mekanism.nugget_tin.tip": "§eKill a snow golem",
+"item.mekanism.ingot_steel": "§eMysterious Triangle",
+"item.mekanism.ingot_steel.tip": "§eThe final item",
+"infuse_type.mekanism.tin": "§eSlime",
+"block.minecraft.gold_ore.tip": "§eNot generated in world",
+"block.minecraft.iron_ore.tip": "§eGenerated in world",
+"block.minecraft.coal_ore.tip": "§eNot generated in world",
+"block.minecraft.diamond_ore.tip": "§eNot generated in world",
+"block.minecraft.redstone_ore.tip": "§eGenerated in world",
+"block.minecraft.lapis_ore.tip": "§eNot generated in world",
+"block.minecraft.emerald_ore.tip": "§eNot generated in world",
+"block.create.zinc_ore.tip": "§eNot generated in world",
+"block.create.copper_ore.tip": "§eNot generated in world",
+"block.minecraft.nether_quartz_ore.tip": "§eGenerated in world",
+"item.minecraft.cocoa_beans.tip": "§eDrop from jungle leaves",
+"block.mekanism.metallurgic_infuser.tip": "§ePut redstone in energy slot for some energy",
 "gas.mekanism.clean_osmium_slurry": "Clean Zinc",
 "gas.mekanism.dirty_osmium_slurry": "Zinc",
 "item.mekanism.clump_osmium": "Zinc Clump",
 "item.mekanism.crystal_osmium": "Zinc Crystal",
 "item.mekanism.dirty_dust_osmium": "Dirty Zinc Dust",
 "item.mekanism.dust_osmium": "Zinc Dust",
-"item.mekanism.shard_osmium": "Zinc Shard"
+"item.mekanism.shard_osmium": "Zinc Shard",
+
+"config.waila.plugin_fruittrees": "Fruit Trees",
+"config.waila.plugin_fruittrees.bee": "Bee",
+
+"advancement.create101.root": "Create 101",
+"advancement.create101.bonsai": "Bonsai Pot",
+"advancement.create101.composter": "Composter",
+"advancement.create101.final": "Mysterious Triangle",
+"advancement.create101.gold": "Gold Ticket",
+"advancement.create101.iron": "Iron Ticket",
+"advancement.create101.shiny": "Shiny Ticket",
+"advancement.create101.sticky": "Sticky Ticket",
+"advancement.create101.trident": "Channeling Trident",
+"advancement.create101.twisted": "Twisted Ticket"
 }
