--- a/.minecraft/openloader/resources/Zengineering/assets/create101/lang/zh_cn.json
+++ b/.minecraft/openloader/resources/Zengineering/assets/create101/lang/zh_cn.json
@@ -4,25 +4,25 @@
 "item.refinedstorage.raw_advanced_processor": "闪耀的票据",
 "item.refinedstorage.processor_binding": "黏稠的票据",
 "item.mekanism.ingot_osmium": "扭曲的票据",
-"block.mekanismgenerators.reactor_glass.tip": "凋灵无法破坏这个方块",
-"block.mekanismgenerators.reactor_frame.tip": "凋灵无法破坏这个方块",
+"block.mekanismgenerators.reactor_glass.tip": "§e凋灵无法破坏这个方块",
+"block.mekanismgenerators.reactor_frame.tip": "§e凋灵无法破坏这个方块",
 "item.mekanism.nugget_tin": "小雪花",
-"item.mekanism.nugget_tin.tip": "杀死雪傀儡掉落",
-"item.mekanism.ingot_steel": "神秘三角",
-"item.mekanism.ingot_steel.tip": "毕业物品",
-"infuse_type.mekanism.tin": "史莱姆",
-"block.minecraft.gold_ore.tip": "不自然生成",
-"block.minecraft.iron_ore.tip": "自然生成",
-"block.minecraft.coal_ore.tip": "不自然生成",
-"block.minecraft.diamond_ore.tip": "不自然生成",
-"block.minecraft.redstone_ore.tip": "自然生成",
-"block.minecraft.lapis_ore.tip": "不自然生成",
-"block.minecraft.emerald_ore.tip": "不自然生成",
-"block.create.zinc_ore.tip": "不自然生成",
-"block.create.copper_ore.tip": "不自然生成",
-"block.minecraft.nether_quartz_ore.tip": "自然生成",
-"item.minecraft.cocoa_beans.tip": "丛林树叶掉落",
-"block.mekanism.metallurgic_infuser.tip": "将红石放入能量格子产出少许能量",
+"item.mekanism.nugget_tin.tip": "§e杀死雪傀儡掉落",
+"item.mekanism.ingot_steel": "§e神秘三角",
+"item.mekanism.ingot_steel.tip": "§e毕业物品",
+"infuse_type.mekanism.tin": "§e史莱姆",
+"block.minecraft.gold_ore.tip": "§e不自然生成",
+"block.minecraft.iron_ore.tip": "§e自然生成",
+"block.minecraft.coal_ore.tip": "§e不自然生成",
+"block.minecraft.diamond_ore.tip": "§e不自然生成",
+"block.minecraft.redstone_ore.tip": "§e自然生成",
+"block.minecraft.lapis_ore.tip": "§e不自然生成",
+"block.minecraft.emerald_ore.tip": "§e不自然生成",
+"block.create.zinc_ore.tip": "§e不自然生成",
+"block.create.copper_ore.tip": "§e不自然生成",
+"block.minecraft.nether_quartz_ore.tip": "§e自然生成",
+"item.minecraft.cocoa_beans.tip": "§e丛林树叶掉落",
+"block.mekanism.metallurgic_infuser.tip": "§e将红石放入能量格子产出少许能量",
 "gas.mekanism.clean_osmium_slurry": "纯净锌浆液",
 "gas.mekanism.dirty_osmium_slurry": "锌浆液",
 "item.mekanism.clump_osmium": "锌碎块",
