--- a/.minecraft/openloader/resources/Zengineering/assets/create101/lang/zh_cn.json
+++ b/.minecraft/openloader/resources/Zengineering/assets/create101/lang/zh_cn.json
@@ -50,12 +50,25 @@
 "tips.title.tip": "Snownee的完美教室",
 
 "create101.tip.bee": "准星指向蜜蜂可以看到其所携带的花粉",
-"create101.tip.oregen": "在Create 101的世界中，只有铁矿、红石矿和石英矿会自然生成",
+"create101.tip.oregen": "在Create 101的世界中，只有铁矿、红石矿、石英矿和远古残骸会自然生成",
 "create101.tip.credit": "方块放置器和绳索滑轮破基岩是Snownee修复的",
-"create101.tip.jei": "多看看JEI，很多东西都被修改或添加了配方！",
+"create101.tip.jei": "多看看JEI，丛林树苗、烈焰粉、凋灵骷髅头颅等物品都被修改或添加了配方！",
+"create101.tip.coco": "破坏丛林树叶可能掉落可可豆",
 "create101.tip.backpack": "在寻找背包？私人箱子是个不错的选择",
 "create101.tip.peaceful_star": "和平模式下，搭建召唤凋灵的结构会直接掉落下界之星",
-"create101.tip.horse_skin": "有些马匹的外表会随着年龄改变",
-"create101.tip.wither_immune": "一些方块可以免于被凋灵破坏",
-"create101.tip.everpotion": "制作你的药水核心吧！按R键就可以打开使用界面了"
+"create101.tip.sol": "丰富饮食可以获得多种增益效果",
+"create101.tip.wither_immune": "强化玻璃和聚变堆框架可以免于被凋灵破坏",
+"create101.tip.everpotion": "制作你的药水核心吧！按R键就可以打开使用界面了",
+"create101.tip.calc": "用合成计算器可以查看制作神秘三角的每个步骤",
+"create101.tip.kelp": "想制作传送带却找不到海带？你可以通过合成制作出海带！",
+"create101.tip.explosion": "引发爆炸的方式不只有TNT",
+"create101.tip.sound": "羊毛能一定程度阻挡噪音传播",
+"create101.tip.ore": "如果将盆栽直接放在传送带上会导致只能收获到第一种物品。解决的方法是在盆栽下方放置缓冲容器",
+"create101.tip.pump": "如果想自动化神秘三角，建一个10,000方块的巧克力湖可能是更经济的选择",
+"create101.tip.coil": "反物质制作太慢了？你可以放置很多个增压线圈",
+"create101.tip.cc": "不会ComputerCraft也能玩这个模组包！",
+"create101.tip.farm": "隔行种植作物，效率大幅提高！",
+"create101.tip.rich_soil": "覆盖戍耕地能加速作物生长，同时不会被踩坏",
+"create101.tip.joy": "有空也试试马匹杂交和烹饪吧！",
+"create101.tip.no_ai": "基于性能考虑，雪傀儡被移除了AI和物理运动"
 }
