--- a/.minecraft/openloader/resources/Zengineering/assets/create101/lang/en_us.json
+++ b/.minecraft/openloader/resources/Zengineering/assets/create101/lang/en_us.json
@@ -22,6 +22,7 @@
 "block.minecraft.redstone_ore.tip": "§eGenerated in world",
 "block.minecraft.lapis_ore.tip": "§eNot generated in world",
 "block.minecraft.emerald_ore.tip": "§eNot generated in world",
+"block.minecraft.nether_gold_ore.tip": "§eNot generated in world",
 "block.create.zinc_ore.tip": "§eNot generated in world",
 "block.create.copper_ore.tip": "§eNot generated in world",
 "block.minecraft.nether_quartz_ore.tip": "§eGenerated in world",
@@ -91,5 +92,6 @@
 "create101.tip.snow": "Snow golem won't generate snow layer in warm biomes",
 "create101.tip.piglin": "Infinite gold means you can trade with piglin infinite times",
 "create101.tip.shears": "Use shears on snow golem, you can get the pumpkin back",
-"create101.tip.energy": "You can put redstone in infuser's energy slot to get startup energy"
+"create101.tip.energy": "You can put redstone in infuser's energy slot to get startup energy",
+"create101.tip.bead": "Right clicking the Soul Bead will lead you to the nearest Nether Fortress"
 }
