--- a/.minecraft/openloader/resources/Zengineering/assets/create101/lang/zh_cn.json
+++ b/.minecraft/openloader/resources/Zengineering/assets/create101/lang/zh_cn.json
@@ -22,6 +22,7 @@
 "block.minecraft.redstone_ore.tip": "§e自然生成",
 "block.minecraft.lapis_ore.tip": "§e不自然生成",
 "block.minecraft.emerald_ore.tip": "§e不自然生成",
+"block.minecraft.nether_gold_ore.tip": "§e不自然生成",
 "block.create.zinc_ore.tip": "§e不自然生成",
 "block.create.copper_ore.tip": "§e不自然生成",
 "block.minecraft.nether_quartz_ore.tip": "§e自然生成",
@@ -88,5 +89,6 @@
 "create101.tip.snow": "雪傀儡不会在温暖的生物群系中产生雪片方块",
 "create101.tip.piglin": "无限的黄金意味着你可以与猪灵交易无数次",
 "create101.tip.shears": "对雪傀儡使用剪刀可以取回南瓜头",
-"create101.tip.energy": "你可以把红石放入灌注机的能量槽来获得启动能量"
+"create101.tip.energy": "你可以把红石放入灌注机的能量槽来获得启动能量",
+"create101.tip.bead": "游魂珠可以为你指明最近下界要塞的方向"
 }
