--- a/.minecraft/openloader/resources/Zengineering/assets/create101/lang/en_us.json
+++ b/.minecraft/openloader/resources/Zengineering/assets/create101/lang/en_us.json
@@ -4,8 +4,8 @@
 "item.refinedstorage.raw_advanced_processor": "Shiny Ticket",
 "item.refinedstorage.processor_binding": "Sticky Ticket",
 "item.mekanism.ingot_osmium": "Twisted Ticket",
-"block.mekanismgenerators.reactor_glass.tip": "§eWither cannot destory this block",
-"block.mekanismgenerators.fusion_reactor_frame.tip": "§eWither cannot destory this block",
+"block.mekanismgenerators.reactor_glass.tip": "§eWithers cannot destory this block.",
+"block.mekanismgenerators.fusion_reactor_frame.tip": "§eWithers cannot destory this block.",
 "item.mekanism.nugget_tin": "Little Snowflake",
 "item.mekanism.nugget_tin.tip": "§eKill a snow golem",
 "item.mekanism.ingot_steel": "§eMysterious Triangle",
@@ -27,7 +27,7 @@
 "block.create.copper_ore.tip": "§eNot generated in world",
 "block.minecraft.nether_quartz_ore.tip": "§eGenerated in world",
 "item.minecraft.cocoa_beans.tip": "§eDrop from jungle leaves",
-"block.mekanism.metallurgic_infuser.tip": "§ePut redstone in energy slot for some energy",
+"block.mekanism.metallurgic_infuser.tip": "§ePut redstone in energy slot for some energy.",
 "slurry.mekanism.clean_osmium": "Clean Zinc Slurry",
 "slurry.mekanism.dirty_osmium": "Dirty Zinc Slurry",
 "item.mekanism.clump_osmium": "Zinc Clump",
@@ -43,7 +43,7 @@
 "advancement.create101.bonsai": "Iron",
 "advancement.create101.redstone": "Redstone",
 "advancement.create101.final": "Mysterious Triangle",
-"advancement.create101.final.desc": "You have won this pack, congrats!",
+"advancement.create101.final.desc": "You have completed this pack, congrats!",
 "advancement.create101.gold": "Gold Ticket",
 "advancement.create101.iron": "Iron Ticket",
 "advancement.create101.shiny": "Shiny Ticket",
@@ -67,31 +67,31 @@
 
 "tips.title.tip": "Tip from Idol Mentor",
 
-"create101.tip.bee": "Point to a bee and you can see what pollens it has",
-"create101.tip.oregen": "In world of Create 101, Only iron ore, redstone ore, quartz ore and ancient debris will be naturally generated",
-"create101.tip.credit": "Blockzapper and rope pulley can break bedrock is fixed by Snownee",
-"create101.tip.jei": "Always check JEI, Jungle sapling, blaze powder, wither skull and many items have had a recipe now!",
-"create101.tip.coco": "Destroying jungle leaves may drop cocoa beans",
-"create101.tip.backpack": "Looking for a backpack? Personal chest is a good choice",
-"create101.tip.peaceful_star": "In peaceful mode, building the structure to summon the wither will drop nether star directly",
-"create101.tip.sol": "Keeping a diverse diet can get many benefits",
-"create101.tip.wither_immune": "Reactor glass and fusion reactor frame is immune to wither",
-"create101.tip.everpotion": "You can make your everpotion core! Press R you can open the UI",
-"create101.tip.calc": "You can use crafting calculator to view every step of making the mysterious triangle. You can import preset recipes!",
-"create101.tip.kelp": "Want to make belt but can't find kelp? You can craft a kelp now!",
-"create101.tip.explosion": "There are more than one way to create explosion",
-"create101.tip.sound": "Wool can block noise transmission to a certain extent",
-"create101.tip.ore": "If the pot is placed on the belt, only the first item can be harvested. The solution is to place a buffer container instead",
-"create101.tip.pump": "If you want to automate the Triangle, building a 10,000 blocks chocolate lake could be a more economical choice",
-"create101.tip.coil": "Making antimatter is too slow? You can place many supercharged coils on the SPS structure",
-"create101.tip.cc": "It doesn't matter to play this pack if you don't know how to ComputerCraft!",
-"create101.tip.farm": "Planting crops alternately, the efficiency is greatly improved!",
-"create101.tip.rich_soil": "The rich soil farmland can speed up growth, and cannot be trampled",
+"create101.tip.bee": "Look at a bee and you can see which pollens it has.",
+"create101.tip.oregen": "In the world of Create 101, only iron ore, redstone ore, quartz ore and ancient debris will be naturally generated.",
+"create101.tip.credit": "The blockzapper and rope pulley breaking bedrock was fixed by Snownee.",
+"create101.tip.jei": "Always check JEI! Jungle saplings, blaze powder, wither skulls, and many items have a recipe now!",
+"create101.tip.coco": "Destroying jungle leaves may drop cocoa beans.",
+"create101.tip.backpack": "Looking for a backpack? The personal chest is a good choice.",
+"create101.tip.peaceful_star": "In peaceful mode, building the structure to summon the wither will drop a nether star directly.",
+"create101.tip.sol": "Keeping a diverse diet can have many benefits.",
+"create101.tip.wither_immune": "Reactor glass and fusion reactor frames are immune to the wither.",
+"create101.tip.everpotion": "You can make an everpotion core! Press R to open the UI.",
+"create101.tip.calc": "You can use the crafting calculator to view every step of making the mysterious triangle. You can import preset recipes!",
+"create101.tip.kelp": "Want to make belt but can't find kelp? You can craft kelp now!",
+"create101.tip.explosion": "There is more than one way to create an explosion.",
+"create101.tip.sound": "Wool can block noise transmission to a certain extent.",
+"create101.tip.ore": "If the pot is placed on the belt, only the first item can be harvested. The solution is to place a buffer container instead.",
+"create101.tip.pump": "If you want to automate the Triangle, building a 10,000 block chocolate lake could be a more economical choice.",
+"create101.tip.coil": "Making antimatter is too slow? You can place multiple supercharged coils on the SPS structure.",
+"create101.tip.cc": "It's not worth playing this pack if you don't know how to use ComputerCraft!",
+"create101.tip.farm": "Try planting crops alternately, the efficiency is greatly improved!",
+"create101.tip.rich_soil": "Rich soil farmland can speed up growth, and cannot be trampled.",
 "create101.tip.joy": "Also try horse breeding and cooking!",
-"create101.tip.no_ai": "Due to performance considerations, snow golem's AI and physics are removed",
-"create101.tip.snow": "Snow golem won't generate snow layer in warm biomes",
-"create101.tip.piglin": "Infinite gold means you can trade with piglin infinite times",
-"create101.tip.shears": "Use shears on snow golem, you can get the pumpkin back",
-"create101.tip.energy": "You can put redstone in infuser's energy slot to get startup energy",
-"create101.tip.bead": "Right clicking the Soul Bead will lead you to the nearest Nether Fortress"
+"create101.tip.no_ai": "Due to performance considerations, snow golem's AI and physics are removed.",
+"create101.tip.snow": "Snow golems won't generate snow layers in warm biomes.",
+"create101.tip.piglin": "Infinite gold means you can trade with piglin infinite times.",
+"create101.tip.shears": "Use shears on snow golems to get the pumpkin back.",
+"create101.tip.energy": "You can put redstone in an infuser's energy slot to get startup energy.",
+"create101.tip.bead": "Right clicking a Soul Bead will lead you to the nearest Nether Fortress."
 }
